Update svg color for search, and prevent hidden text from creating overflow

--- a/component-library/app/components/SearchBar/SearchBar.module.scss
+++ b/component-library/app/components/SearchBar/SearchBar.module.scss
@@ -38,6 +38,7 @@
 }
 
 .Submit {
+    overflow: hidden; //prevent hidden submit text to overflow 
     width: 22px;
     height: 22px;
     border: none; 
